# adk-samples

python/agents/blog-writer/blogger_agent/: agent.py
python/agents/blog-writer/blogger_agent/sub_agents/: __init__.py  blog_editor.py  blog_planner.py  blog_writer.py
python/agents/blog-writer/eval/: test_eval.py
python/agents/blog-writer/tests/: test_agent.py
python/agents/currency-agent/: Dockerfile  main.py  pyproject.toml
python/agents/currency-agent/currency_agent/: agent.py
python/agents/deep-search/app/: config.py
python/agents/machine-learning-engineering/: pyproject.toml
python/agents/machine-learning-engineering/deployment/: deploy.py  test_deployment.py
python/agents/machine-learning-engineering/eval/full_eval/: test_eval.py
python/agents/machine-learning-engineering/machine_learning_engineering/: agent.py
python/agents/machine-learning-engineering/machine_learning_engineering/shared_libraries/: check_leakage_util.py  code_util.py  config.py  debug_util.py
python/agents/machine-learning-engineering/machine_learning_engineering/sub_agents/ensemble/: agent.py
python/agents/machine-learning-engineering/machine_learning_engineering/sub_agents/initialization/: agent.py
python/agents/machine-learning-engineering/machine_learning_engineering/sub_agents/refinement/: agent.py
python/agents/machine-learning-engineering/machine_learning_engineering/sub_agents/submission/: agent.py
python/agents/machine-learning-engineering/tests/: test_agents.py
python/agents/safety-plugins/safety_plugins/: main.py  prompts.py  util.py
python/agents/safety-plugins/safety_plugins/plugins/: agent_as_a_judge.py  model_armor.py
python/agents/software-bug-assistant/: pyproject.toml
