[project]
name = "currency-agent"
version = "0.1.0"
description = "Currency conversion agent using ADK, MCP and A2A"
authors = [
    { name = "Google LLC" }
]
license = {text = "Apache License 2.0"}
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "a2a-sdk==0.3.3",
    "fastmcp==2.11.3",
    "google-adk==1.23.0",
    "google-genai>=1.17.0",
    "python-dotenv>=1.1.0",
    "google-auth[requests]>=2.48.0"
]

[tool.ruff]
extend = "../../../pyproject.toml"

[tool.ruff.lint.isort]
known-first-party = ["currency_agent"]

[tool.agent-starter-pack.settings]
agent_directory = "currency_agent"
deployment_targets = ["agent_engine", "cloud_run"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
